--- a/testhtmlhomepage.html
+++ b/testhtmlhomepage.html
@@ -10,12 +10,17 @@
  
     <title>Seu Sangue Minha Vida </title>
   	
-  	<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-   	<link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  	<link href="/cdn/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/testhomepage/css.css" rel="stylesheet">
+   	<link href="/cdn/fonts/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   
-	<link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
-    <link href="css/creative.min.css" rel="stylesheet">
+	<link href="/cdn/magnific-popup/magnific-popup.css" rel="stylesheet">
+    <link href="/cdn/css/creative.min.css" rel="stylesheet">
  	 
+    <style>
+
+    </style>
+
   	<!--Faltou colocar o java script aqui
  	<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
